# phasereconstruction

./: .gitignore  LICENSE  Propagator.m  README.md  iterative.m  main.asv  main.m  main.m~  old_main.m  parameters.m  rs_backprop.m
CUDAFiles/: CMakeCache.txt  CMakeLists.txt  Makefile  ParamDesc  cmake_install.cmake  main.cpp  main.cu  params.json  phaseretrieval
CUDAFiles/include/: appData.h  blur.h  cudaDebug.h  fista.h  frameThread.h  kernels.h  lodepng.h  multilayer.h  retrievalThread.h  settings.h  ticker.h  utils.h  videoParser.h
CUDAFiles/src/: appData.cpp  blur.cu  cudaDebug.cu  fista.cu  frameThread.cpp  kernels.cu  lodepng.cpp  multilayer.cu  settings.cpp  ticker.cpp  utils.cpp  videoParser.cpp
MatlabFiles/: RS_propagator.m  fista.m  main.m  parameters.m  plotElArray.m  simulated_hologram.m
MatlabFiles/Pics/: backprop_g.xcf
MatlabFiles/algorithms/: fienup.m  fista.m  iterative.m  multilayer_fista.m
MatlabFiles/utils/: bound.m  c_norm.m  mask.m  propagation.m  r_norm.m  softthreshold.m
algorithms/: fienup.asv  fienup.m  fista.asv  fista.m  multilayer_fista.asv
utils/: mask.m  propagation.asv  propagation.m  r_norm.m
